[gd_scene load_steps=4 format=2]

[ext_resource path="res://loading.gd" type="Script" id=1]
[ext_resource path="res://fonturi/Acme-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.15845
margin_right = 2.15845
script = ExtResource( 1 )

[node name="loading" type="Label" parent="."]
margin_left = 604.891
margin_top = 449.273
margin_right = 919.891
margin_bottom = 576.273
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.898039, 0.701961, 0.0392157, 1 )
text = "Loading"
align = 1
valign = 1

[node name="punct1" type="Label" parent="."]
margin_left = 951.0
margin_top = 454.0
margin_right = 1041.0
margin_bottom = 581.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.898039, 0.701961, 0.0392157, 1 )
text = "."
align = 1
valign = 1

[node name="punct2" type="Label" parent="."]
margin_left = 1071.55
margin_top = 454.0
margin_right = 1135.55
margin_bottom = 581.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.898039, 0.701961, 0.0392157, 1 )
text = "."
align = 1
valign = 1

[node name="punct3" type="Label" parent="."]
margin_left = 1169.97
margin_top = 451.103
margin_right = 1270.97
margin_bottom = 578.103
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.898039, 0.701961, 0.0392157, 1 )
text = "."
align = 1
valign = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
